feat: Finish header

--- a/index.html
+++ b/index.html
@@ -6,8 +6,30 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="maket">
+<header>
+    <div class="header1">
+<div class="logo">
+    <img src="./image/logoheader.svg" alt="">
+</div>
+    <nav>
+        <ul>
+
+            <li><a href="#"></a>Home</li>
+            <li><a href="#"></a>About me</li>
+            <li><a href="#"></a>Products</li>
+            <li><a href="#"></a>Contact me</li>
+        </ul>
+    </nav>
+    <div class="korzinka">
+        <img src="./image/korzinka.svg" alt="">
+    </div>
+    </div>
+</header>
+</div>
 
 </body>
 </html>
