--- a/index.html
+++ b/index.html
@@ -29,6 +29,21 @@
     </div>
     </div>
 </header>
+    <div class="block-0">
+        <p class="bc-1"><img  src="./image/bc-1.png" alt=""></p>
+        <p class="bc-2"><img  src="./image/bc-2.png" alt=""></p>
+        <img  class="frontphoto-1" src="./image/frontphoto-1.png" alt="">
+        <!--<img  class="frontphoto-2" src="./image/frontphoto-2.png" alt="">-->
+        <div class="text-0">
+            <p class="new">NEW</p>
+            <p class="spring">Spring Cushion</p>
+            <p class="collection">Collection 2019</p>
+            <a href="" class="buynow">BUY  NOW</a>
+
+            <button class="btn"></button>
+        </div>
+    </div>
+    <div></div>
 
 </div>
 
