feat: added start text-1

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="maket">
+
 <header>
     <div class="header1">
 <div class="logo">
@@ -33,19 +33,20 @@
         <p class="bc-1"><img  src="./image/bc-1.png" alt=""></p>
         <p class="bc-2"><img  src="./image/bc-2.png" alt=""></p>
         <img  class="frontphoto-1" src="./image/frontphoto-1.png" alt="">
-        <!--<img  class="frontphoto-2" src="./image/frontphoto-2.png" alt="">-->
         <div class="text-0">
             <p class="new">NEW</p>
             <p class="spring">Spring Cushion</p>
             <p class="collection">Collection 2019</p>
             <a href="" class="buynow">BUY  NOW</a>
-
             <button class="btn"></button>
         </div>
+        <div class="text1">
+            <h2 class="cushion">I'M A CUSHION DESIGNER</h2>
+        </div>
     </div>
-    <div></div>
 
-</div>
+
+
 
 </body>
 </html>
