--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         </div>
         <div class="text1">
             <h2 class="cushion">I'M A CUSHION DESIGNER</h2>
-            <p></p>
+            <p class="text-p">Based in San Francisco, California I design trendy and fashion Cushions,<br> since I have memory I always had a tendency to design and illustration.</p>
+            <button class="learn">LEARN MORE</button>
         </div>
     </div>
 
