--- a/index.html
+++ b/index.html
@@ -45,7 +45,25 @@
             <p class="text-p">Based in San Francisco, California I design trendy and fashion Cushions,<br> since I have memory I always had a tendency to design and illustration.</p>
             <button class="learn">LEARN MORE</button>
         </div>
-    </div>
+        <div class="block-1">
+            <img src="./image/block-1-1.png" alt="">
+            <img src="./image/block-1-2.png" alt="">
+            <img src="./image/block-1-3.png" alt="">
+        </div>
+        <div class="text2">
+            <p class="about1">About me</p>
+            <a class="learn1"href="">learn more</a>
+        </div>
+        <div class="text3">
+            <p class="myproducts">My products</p>
+            <a class="learn2"href="">learn more</a>
+        </div>
+        <div class="text4">
+            <p class="contactme1">Contact me</p>
+            <a class="learn3"href="">learn more</a>
+        </div>
+
+
 
 
 
