feat: added finish block-5

--- a/index.html
+++ b/index.html
@@ -62,8 +62,64 @@
             <p class="contactme1">Contact me</p>
             <a class="learn3"href="">learn more</a>
         </div>
+        <div class="block-2">
+            <div class="begin">
+                <h2 class="beginnings">BEGINNINGS</h2>
+                <p class="credibly">Credibly innovate granular internal or organic<br> sources whereas high standards in web-readiness.<br>  Energistically scale future-proof core competencies<br>  vis-a-vis impactful experiences.</p>
+                <br>
+                <p class="dramatically1">Dramatically synthesize integrated schemas. with<br> optimal networks.</p>
+            </div>
+            <div class="kartinka1">
+                <img src="./image/kartinka1.png" alt="">
+            </div>
+        </div>
+
+        <hr class="line0" align="center" width="1215" size="2" color="#D7B7D4" />
+        <div class="block-3">
+            <div class="kartinka2">
+                <img src="./image/kartinka2.png" alt="">
+            </div>
+            <div class="carrer1">
+                <h3 class="carrer">CARRER</h3>
+                <p class="collaboratively1">Collaboratively administrate turnkey channels<br> whereas virtual e-tailers.</p>
+                <p class="objectively">Objectively seize scalable metrics whereas proactive e-services seamlessly empower fully researched growth strategies.</p>
+                <br>
+                <p class="and">And interoperable internal or “organic” sources.</p>
+                <a class="learn11" href="">LEARN MORE</a>
+
+            </div>
+        </div>
+        <hr class="line1" align="center" width="1215" size="2" color="#D7B7D4" />
+        <div class="block-4">
+            <div class="text5">
+                <h3 class="product1">products</h3>
+                <p class="seamlessly">Seamlessly empower fully researched growth<br> strategies and interoperable internal or “organic”<br> sources.</p>
+                <p class="credibly">Credibly innovate granular internal or “organic”<br> sources whereas high standards in web-readiness.</p>
+                <p class="energistically">Energistically scale future-proof core competence</p>
+            </div>
+            <div class="kartinka3">
+                <img src="./image/kartinka3.png" alt="">
+            </div>
+        </div>
+        <div class="block-5">
+            <div class="bl-5-1">
+                <img  class="block-5-1" src="./image/block-5-1.png" alt="">
+                <img class="block-5-2"src="./image/block-5-2.png" alt="">
+                <img class="block-5-3" src="./image/block-5-3.png" alt="">
+        </div>
+        </div>
+        <div class="bl-5-2">
+            <p class="plated">Plated Cushion</p>
+            <p class="silver">Silver Cushion</p>
+            <p class="deep">Deep Blue Cushion</p>
 
 
+        </div>
+        <div class="usa">
+            <p class="usa1">$19.99USD</p>
+            <p class="usa2">$19.99USD</p>
+            <p class="usa3">$19.99USD</p>
+        </div>
 
 
 
