feat: added finish footer

--- a/index.html
+++ b/index.html
@@ -112,17 +112,46 @@
             <p class="plated">Plated Cushion</p>
             <p class="silver">Silver Cushion</p>
             <p class="deep">Deep Blue Cushion</p>
-
-
         </div>
         <div class="usa">
             <p class="usa1">$19.99USD</p>
             <p class="usa2">$19.99USD</p>
             <p class="usa3">$19.99USD</p>
         </div>
+        <div class="block-6">
+            <div class="bl-6-0">
+                <img class="bl-6-01" src="./image/kartinka4.png" alt="">
+                <img class="bl-6-02" src="./image/kartinka5.png" alt="">
+                <img class="bl-6-03" src="./image/kartinka6.png" alt="">
+            </div>
+        </div>
+        <div class="bl-6-1">
+            <p class="pink">Pink Cushion</p>
+            <p class="black">Black Cushion</p>
+            <p class="green">Green Cushion</p>
+        </div>
+        <div class="usa1">
+            <p class="usa1-1">$19.99USD</p>
+            <p class="usa1-2">$19.99USD</p>
+            <p class="usa1-3">$19.99USD</p>
+        </div>
+        <footer>
+            <div class="block-7">
+                <img  class="logo3" src="./image/3logo.svg" alt="">
+             </div>
+             <div class="block-8">
+                 <div class="lastfooter">
+                     <img class="footerlogo" src="./image/logofooter.svg" alt="">
+                 </div>
+                 <ul class="ulfooter">
+                     <li><a href="#"></a>Home</li>
+                     <li><a href="#"></a>About me</li>
+                     <li><a href="#"></a>Products</li>
+                     <li><a href="#"></a>Contact me</li>
+                 </ul>
+             </div>
 
-
-
+        </footer>
 
 </body>
 </html>
